<resources>
    <string name="app_name">ddu</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="main_tab_study">学习</string>
    <string name="main_tab_work">工作</string>
    <string name="main_tab_life">生活</string>
    <string name="main_tab_me">我</string>
    <string name="main_exit_msg">再按一次退出程序</string>
    <string name="web_refresh">刷新</string>
    <string name="common_cancel">取消</string>
    <string name="common_please_wait">请稍候&#8230;</string>
    <string name="no_install_app_store">未发现应用商店</string>
    <string name="work_program_kotlin">Kotlin</string>
    <string name="work_program_java">Java</string>
    <string name="work_program_swift">Swift</string>
    <string name="work_android">AndroidX</string>
    <string name="work_android_service">Service</string>
    <string name="work_android_ipc">AIDL &amp; Messenger</string>
    <string name="work_kotlin">kotlin</string>
    <string name="work_kotlin_code_labs">CodeLabs</string>
    <string name="work_jet_pack">JetPack</string>
    <string name="work_java">Java</string>
    <string name="life_calculator">计算器</string>
    <string name="life_calculator_house">房贷计算器</string>
    <string name="life_calculator_income">个税计算器</string>
    <string name="life_food">饮食</string>
    <string name="life_sleep">作息时间</string>
    <string name="life_food_detail">【健康小课堂】\n❤️红色入心：\n\t西红柿、红萝卜、枸杞、红枣、红肉椒。\n💚绿色入肝：\n\t芹菜、波菜，空心菜，西兰花等绿色蔬菜。\n💛黄色入脾：\n\t小米，玉米粒、红薯、南瓜，土豆。\n⚫️黑色入肾：\n\t黑木耳、紫菜、黑芝麻，黑米。\n⚪️白色入肺：\n\t银耳、百合、山药、杏仁、白萝卜。
\n每天，五色蔬菜都用，5种颜色各一种。功效：有利于身体平衡哦[耶][耶][耶]</string>
    <string name="life_joke">笑话</string>
    <string name="life_sentiment">感悟</string>
    <string name="help"><a href="http://www.baidu.com">打开app</a></string>
    <string name="parse1">{hello} [world]</string>
    <string name="parse2">(hello) [world]</string>
    <string name="parse3">"{hello} (world)"</string>
    <string name="parset">^hello^ (world)</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="format_count_down">%1$d 后重发</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling1">ScrollingActivity1</string>
    <string name="title_activity_scrolling3">ScrollingActivity3</string>
    <string name="option_progress">Progress:</string>
    <string name="option_bar_color">Bar color:</string>
    <string name="option_wheel_color">Wheel color:</string>
    <string name="interpolated">Interpolated progress:</string>
    <string name="main_text">Options:</string>
    <string name="about_text">This app is for demonstrate the Material-ish progress wheel library, which provides a Material-style progress wheel compatible back to API 9. You can have indeterminate and determinate versions of the progress wheel, the later with a linear animation or a interpolated one like in the guidelines.\n\nRefer to the Github project page for more info at https://github.com/pnikosis/materialish-progress. </string>
    <string name="about">About</string>
    <string name="title_activity_scrolling2">ScrollingActivity2</string>
    <string name="one_separator">一种分割符</string>
    <string name="two_separator">二种分割符</string>
    <string name="multi_separator">多种分割符</string>
    <string name="custom_separator">自定义分割符</string>
    <string name="advance_separator">高级操作符</string>
    <string name="text_phrase_one">永生不过是场{幻梦}，唯吾{所爱}不朽</string>
    <string name="text_phrase_two">何以{缘起}?何以[缘灭]?当以{剑歌}问之</string>
    <string name="text_phrase_three">凤兮{凤兮}归[故乡],遨(游)四海(求其凰)</string>
    <string name="text_phrase_custom">邂逅你，是(生生世世)的宿命</string>
    <string name="text_phrase_multi_click">众里寻他千{百度}，蓦然回首，那人却在[网易]</string>
    <string name="text_advanced">永生不过是场幻梦，唯吾所爱不朽。邂逅你，是生生世世的宿命。何以缘起?何以缘灭?当以剑歌问之。{我是小尾巴}</string>
    <string name="text_img_span_content">永生不过是场幻梦，唯吾所爱不朽。邂逅你，是生生世世的宿命。何以缘起?何以缘灭?当以剑歌问之。</string>
    <string name="text_img_span_tail">我是小尾巴</string>
    <string name="egg_prompt">How do you like your egg?</string>
    <string name="timer_on">Start</string>
    <string name="timer_off">Stop</string>
    <string name="notification_title">Egg Timer</string>
    <string name="notification_text">Your egg is ready!!</string>
    <string name="fcm_message">FCM Message</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="egg_notification_channel_id" translatable="false">egg_channel</string>
    <string name="egg_notification_channel_name" translatable="true">Egg</string>
    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
    <string name="eggs_ready">It is time! Bon appetit!</string>
    <string name="timer_running">Egg timer is running...</string>
    <string name="breakfast_notification_channel_description">Breakfast reminder</string>
    <string name="snooze">Snooze</string>
    <string name="fan_off">off</string>
    <string name="fan_low">1</string>
    <string name="fan_medium">2</string>
    <string name="fan_high">3</string>
    <string name="change">Change</string>
    <string name="reset">Reset</string>
    <string name="canvasContentDescription">Mini Paint is a simple line drawing app.
        Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="clipping">Clipping</string>
    <string name="translated">translated text</string>
    <string name="skewed">"Skewed and "</string>
    <string name="instructions_title">
   <b>How to play:</b>
   </string>
</resources>