<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/dp_50">

    <Button
        android:id="@+id/btn_one"
        style="@style/ButtonStyle"
        android:text="@string/one_separator" />

    <Button
        android:id="@+id/btn_two"
        style="@style/ButtonStyle"
        android:text="@string/two_separator" />

    <Button
        android:id="@+id/btn_multi"
        style="@style/ButtonStyle"
        android:text="@string/multi_separator" />

    <Button
        android:id="@+id/btn_custom"
        style="@style/ButtonStyle"
        android:text="@string/custom_separator" />

    <Button
        android:id="@+id/btn_advance"
        style="@style/ButtonStyle"
        android:text="@string/advance_separator" />

</LinearLayout>
