<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ecedf1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout style="@style/DefaultLinearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_13"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:text="金融理财"
                android:textColor="@color/c_000000" />

            <com.ddu.icore.ui.view.OptionItemView
                android:id="@+id/oiv_calculator_house"
                style="@style/DefaultRelativeLayout"
                app:i_leftIcon="@drawable/life_home_icon"
                app:i_leftIcon_tint="#CD7F32"
                app:i_rightIcon="@drawable/right_arrow_gray"
                app:i_title="房贷计算器" />

            <com.ddu.icore.ui.view.OptionItemView
                android:id="@+id/oiv_calculator_income"
                style="@style/DefaultRelativeLayout"
                app:i_leftIcon="@drawable/life_person_icon"
                app:i_leftIcon_tint="@color/c_b2ff0000"
                app:i_rightIcon="@drawable/right_arrow_gray"
                app:i_title="@string/life_calculator_income" />

        </LinearLayout>

        <LinearLayout style="@style/DefaultLinearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_13"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:text="健康"
                android:textColor="@color/c_000000" />

            <com.ddu.icore.ui.view.OptionItemView
                android:id="@+id/oiv_food"
                style="@style/DefaultRelativeLayout"
                app:i_leftIcon="@drawable/life_food_icon"
                app:i_leftIcon_tint="@color/c_b234c749"
                app:i_rightIcon="@drawable/right_arrow_gray"
                app:i_title="@string/life_food" />

            <com.ddu.icore.ui.view.OptionItemView
                android:id="@+id/oiv_sleep"
                style="@style/DefaultRelativeLayout"
                app:i_leftIcon="@drawable/life_sleep_icon"
                app:i_leftIcon_tint="@color/c_b2000000"
                app:i_rightIcon="@drawable/right_arrow_gray"
                app:i_title="@string/life_sleep" />

        </LinearLayout>

        <LinearLayout style="@style/DefaultLinearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_13"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:text="生活感悟"
                android:textColor="@color/c_000000" />

            <com.ddu.icore.ui.view.OptionItemView
                android:id="@+id/oiv_joke"
                style="@style/DefaultRelativeLayout"
                app:i_leftIcon="@drawable/life_joke_icon"
                app:i_leftIcon_tint="@color/c_b2ff00ff"
                app:i_rightIcon="@drawable/right_arrow_gray"
                app:i_title="@string/life_joke" />

            <com.ddu.icore.ui.view.OptionItemView
                android:id="@+id/oiv_life_sentiment"
                style="@style/DefaultRelativeLayout"
                app:i_leftIcon="@drawable/life_sentiment_icon"
                app:i_leftIcon_tint="@color/c_b20000ff"
                app:i_rightIcon="@drawable/right_arrow_gray"
                app:i_title="@string/life_sentiment" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
